--- a/examples/landing/index.html
+++ b/examples/landing/index.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Skeleton: Responsive CSS Boilerplate</title>
+  <title>Skeleton: Responsive RTL CSS Boilerplate</title>
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Farzan Tinati">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -57,17 +57,17 @@
     <div class="container">
       <div class="row">
         <div class="one-third column value">
-          <h2 class="value-multiplier">67%</h2>
+          <h2 class="value-multiplier">۶۷%</h2>
           <h5 class="value-heading">افزایش فروش</h5>
           <p class="value-description">احتمال فروش سایت‌هایی که بر روی موبایل هم قابل مشاهده است بیشتر است.</p>
         </div>
         <div class="one-third column value">
-          <h2 class="value-multiplier">90%</h2>
+          <h2 class="value-multiplier">۹۰%</h2>
           <h5 class="value-heading">کاربران از انواع دستگاه‌ها</h5>
           <p class="value-description">کاربران در سراسر دنیا از دستگاه‌های مختلف برای دسترسی به اینترنت استفاده میکنند.</p>
         </div>
         <div class="one-third column value">
-          <h2 class="value-multiplier">66%</h2>
+          <h2 class="value-multiplier">۶۶%</h2>
           <h5 class="value-heading">کاربران ناراضی</h5>
           <p class="value-description">کاربرانی که بیش از حد برای لود شدن صفحه و سایت منتظر میمانند ناراضی میشوند.</p>
         </div>
